实现轮播的基本功能

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div class="mybutton2"></div>
 
 <script>
+    var lis = document.getElementById('myul').
     var purse =0;
     document.getElementsByClassName('mybutton')[0].onclick=function () {
         purse++;
