添加下面的点

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="mybutton" onmouseenter="moveEnter()"></div>
     <div class="mybutton2" id="mybutton2" onmouseenter="moveEnter()"></div>
     <div class="points">
-            <div class="pos">
-                <div class="po">1</div>
+            <div class="pos" id="pos">
+                <div class="po" id="aa">1</div>
                 <div class="po">1</div>
                 <div class="po">1</div>
                 <div class="po">1</div>
