--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
     <div class="mybutton2" id="mybutton2" onmouseenter="moveEnter()"></div>
     <div class="points">
             <div class="pos" id="pos">
-                <div class="po" id="aa">1</div>
-                <div class="po">1</div>
-                <div class="po">1</div>
-                <div class="po">1</div>
+                <div class="po"></div>
+                <div class="po"></div>
+                <div class="po"></div>
+                <div class="po"></div>
             </div>
     </div>
 </div>
-<div style="width: 500px;height: 100px;border: 1px solid red;text-align: center">
-    <div style="width: 150px">shuoshuo</div>
-</div>
+
 <script src="js/index.js"></script>
 <script>
     new swip(600,300);
