添加小点点

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <div class="mybutton" onmouseenter="moveEnter()"></div>
     <div class="mybutton2" id="mybutton2" onmouseenter="moveEnter()"></div>
     <div class="points">
-            <div class="pos" id="pos"></div>
+            <div class="pos" id="pos">
+                <!--<div class="po"></div>-->
+            </div>
     </div>
 </div>
 
